feat: implement projects

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -10,6 +10,9 @@
   "AboutMe": {
     "1": "Sobre mim"
   },
+  "All": {
+    "1": "Todos"
+  },
   "BioDescription": {
     "1": "Sou uma pessoa muito alto astral, gosto de deixar as coisas sempre animadas e confortáveis para todos ao meu redor, também gosto de aprender sempre mais, então quando me mostram ferramentas, frameworks, novas linguagens ou novos conteúdos eu sempre dou a devida atenção pois todo conhecimento sempre sera bem vindo. Desde de pequeno gosto muito de tecnologia e sempre fui fascinado por esse mundo. A principio eu queria trabalhar com robótica, ate que entrei na área de programação e acabei gostando muito mais de mexer com os software. Meu primeiro contato foi com programação de jogos digitais em 2019, mas me aprofundei na área em 2021 quando entrei na ",
     "2": ". Hoje sou um desenvolvedor web Full-stack e pretendo continuar crescendo e aprimorando meus conhecimentos."
