--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,9 @@
   "AboutMe": {
     "1": "About me"
   },
+  "All": {
+    "1": "All"
+  },
   "BioDescription": {
     "1": "I'm a very high-spirited person, I like to make things always fun and comfortable for all around me, I also like to learn always more, so when someone shows me a new tool, frameworks, new programming languages or new contents I always give my attention, because all knowledge will be welcome. Sinse I was a child I love technology and I have always been facinated about this world. At first I wanted to work with robots, until I found the programming area and ended up enjoying using code much more. My first contact with programming was in 2019 with digital game development, but I went deeper in 2021 when I started studying at ",
     "2": ". Today I am a Full-stack web developer and I intend to continue growing and improving my knowledge."
