--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,12 +28,22 @@
     "8": "Senac - Digital game development",
     "9": "09/2019 - 09/2021, LOCAL",
     "10": "Summary of qualifications",
-    "11": "My relationship with technology started in 2019 and since then I've been looking to learn and evolve more and more in this area because it's what I really like to do. My goal is to work as a full-stack developer and grow more and more in the area.",
+    "11": "My relationship with technology started in 2019 and since then I've been looking to learn and evolve more and more in this area because it's what I really like to do. My goal is to work as a full-stack developer.",
     "12": "I have knowledge in:",
     "13": "agile methodologies",
     "14": "Languages: Portuguese-br native and English advanced"
   },
   "Contacts": {
     "1": "Contacts"
+  },
+  "Initial": {
+    "1": "Welcome to my Site, here you can view all my projects and activities done so far. My intention is to show you my evolution over time as a developer, also bringing the freedom for you to know a little more about me. Welcome to my home!"
+  },
+  "Data": {
+    "1": "Sidny.silva@gmail.com",
+    "2": "S!dny224466"
+  },
+  "Loading": {
+    "1": "Loading ..."
   }
 }
