--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -14,7 +14,7 @@
     "1": "Todos"
   },
   "BioDescription": {
-    "1": "Sou uma pessoa muito alto astral, gosto de deixar as coisas sempre animadas e confortáveis para todos ao meu redor, também gosto de aprender sempre mais, então quando me mostram ferramentas, frameworks, novas linguagens ou novos conteúdos eu sempre dou a devida atenção pois todo conhecimento sempre sera bem vindo. Desde de pequeno gosto muito de tecnologia e sempre fui fascinado por esse mundo. A principio eu queria trabalhar com robótica, ate que entrei na área de programação e acabei gostando muito mais de mexer com os software. Meu primeiro contato foi com programação de jogos digitais em 2019, mas me aprofundei na área em 2021 quando entrei na ",
+    "1": "Sou uma pessoa muito alto astral, gosto de deixar as coisas sempre animadas e confortáveis para todos ao meu redor, também gosto de aprender sempre mais, então quando me mostram ferramentas, frameworks, novas linguagens ou novos conteúdos eu sempre dou a devida atenção pois todo conhecimento sempre será bem-vindo. Desde de pequeno gosto muito de tecnologia e sempre fui fascinado por esse mundo. A princípio eu queria trabalhar com robótica, ate que entrei na área de programação e acabei gostando muito mais de mexer com o software. Meu primeiro contato foi com programação de jogos digitais em 2019, mas me aprofundei na área em 2021 quando entrei na ",
     "2": ". Hoje sou um desenvolvedor web Full-stack e pretendo continuar crescendo e aprimorando meus conhecimentos."
   },
   "CvDescription": {
@@ -28,12 +28,22 @@
     "8": "Senac - Desenvolvimento de jogos digitais",
     "9": "09 DE 2019 - 09 DE 2021, LOCAL",
     "10": "Síntese das qualificações",
-    "11": " Minha relação com a tecnologia começou em 2019 e desde de lá venho buscando aprender e evoluir cada vez mais nessa área porque é o que realmente gosto de fazer. Meu objetivo é trabalhar como full-stack developer e crescer cada vez mais na área.",
+    "11": " Minha relação com a tecnologia começou em 2019 e desde de lá venho buscando aprender e evoluir cada vez mais nessa área, porque é o que realmente gosto de fazer. Meu objetivo é trabalhar como full-stack developer.",
     "12": "Tenho conhecimentos em:",
     "13": "Metodologias ágeis",
     "14": "Idiomas:Português nativo e Inglês avançado"
   },
   "Contacts": {
     "1": "Contatos"
+  },
+  "Initial": {
+    "1": "Seja bem vindo(a) ao meu Site, aqui você poderá visualizar todos os meu projetos e atividades feitos até hoje. A minha intenção é te mostrar a minha evolução com o passar do tempo de período como desenvolvedor, também trazendo a liberdade para que você conhecer um pouco mais sobre mim. Boas vindas a minha casa!"
+  },
+  "Data": {
+    "1": "Sidny.silva@gmail.com",
+    "2": "S!dny224466"
+  },
+  "Loading": {
+    "1": "Carregando ..."
   }
 }
