fix: wrong language sintax

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -31,7 +31,7 @@
     "11": "My relationship with technology started in 2019 and since then I've been looking to learn and evolve more and more in this area because it's what I really like to do. My goal is to work as a full-stack developer.",
     "12": "I have knowledge in:",
     "13": "agile methodologies",
-    "14": "Languages: Portuguese-br native and English advanced"
+    "14": "Languages: Native Portuguese-br, advanced English."
   },
   "Contacts": {
     "1": "Contacts"
