--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,7 +19,7 @@
   },
   "CvDescription": {
     "1": "Experience",
-    "2": "Kenzie Academy Brazil - Faciltator jr",
+    "2": "Kenzie Academy Brazil - Facilitator jr",
     "3": "02/2022 - 08/2022",
     "4": "Monitoring students in the learning process of Front-end Development technologies: HTML, CSS, JavaScript e React; Leadership of teams of monitors in order to direct them to give the best assistance to the devs. Back-end helped to create APIs using NodeJs and Prisma.",
     "5": "Formation",
