--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -19,7 +19,7 @@
   },
   "CvDescription": {
     "1": "Experiência",
-    "2": "Kenzie Academy Brasil - Faciltador jr",
+    "2": "Kenzie Academy Brasil - Facilitador jr",
     "3": "02 DE 2022 - 08 DE 2022",
     "4": "Acompanhamento de alunos no processo de aprendizagem de tecnologias de Desenvolvimento Front-end: HTML, CSS, Javascript e React; Liderança de equipes de monitores a fim de direcioná-los a dar o melhor auxílio para os devs em formação. Back-end auxiliava na criação de APIs utilizando NodeJS e Prisma.",
     "5": "Formação",
@@ -37,7 +37,7 @@
     "1": "Contatos"
   },
   "Initial": {
-    "1": "Seja bem vindo(a) ao meu Site, aqui você poderá visualizar todos os meu projetos e atividades feitos até hoje. A minha intenção é te mostrar a minha evolução com o passar do tempo de período como desenvolvedor, também trazendo a liberdade para que você conhecer um pouco mais sobre mim. Boas vindas a minha casa!"
+    "1": "Seja bem vindo(a) ao meu Site, aqui você poderá visualizar todos os meu projetos e atividades feitos até hoje. A minha intenção é te mostrar a minha evolução com o passar do tempo como desenvolvedor, também trazendo a liberdade para que você possa conhecer um pouco mais sobre mim. Boas vindas a My Home !"
   },
   "Loading": {
     "1": "Carregando ..."
