fix: font and spacing

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -37,7 +37,7 @@
     "1": "Contatos"
   },
   "Initial": {
-    "1": "Seja bem vindo(a) ao meu Site, aqui você poderá visualizar todos os meu projetos e atividades feitos até hoje. A minha intenção é te mostrar a minha evolução com o passar do tempo como desenvolvedor, também trazendo a liberdade para que você possa conhecer um pouco mais sobre mim. Boas vindas a My Home !"
+    "1": "Seja bem vindo(a) ao My Home, aqui você poderá visualizar todos os meu projetos e atividades feitos até hoje. A minha intenção é te mostrar a minha evolução com o passar do tempo como desenvolvedor, também trazendo a liberdade para que você possa conhecer um pouco mais sobre mim. Boas vindas a My Home !"
   },
   "Loading": {
     "1": "Carregando ..."
