--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,7 +37,7 @@
     "1": "Contacts"
   },
   "Initial": {
-    "1": "Welcome to my Site, here you can view all my projects and activities done so far. My intention is to show you my evolution over time as a developer, also bringing the freedom for you to know a little more about me. Welcome to my home!"
+    "1": "Welcome to My Home, here you can view all my projects and activities done so far. My intention is to show you my evolution over time as a developer, also bringing the freedom for you to know a little more about me. Welcome to my home!"
   },
 
   "Loading": {
