--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,7 +8,7 @@
     "3": "In Button bellow you can take a look and play some games that i created."
   },
   "AboutMe": {
-    "1": "About me"
+    "1": "About_me"
   },
   "All": {
     "1": "All"
