--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -8,7 +8,7 @@
     "3": "No botão abaixo você poderá visualizar e jogar alguns jogos que criei."
   },
   "AboutMe": {
-    "1": "Sobre mim"
+    "1": "Sobre_mim"
   },
   "All": {
     "1": "Todos"
